--- a/OnlineShop.Services.AuthAPI/appsettings.json
+++ b/OnlineShop.Services.AuthAPI/appsettings.json
@@ -5,5 +5,15 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "ConnectionString": "Server=(LocalDb)\\MSSQLLocalDB;Database=OnlineShop_Auth;Trusted_Connection=True;TrustServerCertificate=True"
+  },
+  "ApiSettings": {
+    "JwtOptions": {
+      "Secret": "secret-key-for-jwt-auth",
+      "Issuer": "online-shop-auth-api",
+      "Audience": "online-shop-client"
+    }
+  }
 }
