--- a/OnlineShop.Services.Basket.Api/appsettings.json
+++ b/OnlineShop.Services.Basket.Api/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "RedisUrl": "127.0.0.1:6379"
+  }
 }
