--- a/OnlineShop.Services.Basket.DataLayer/OnlineShop.Services.Basket.DataLayer.csproj
+++ b/OnlineShop.Services.Basket.DataLayer/OnlineShop.Services.Basket.DataLayer.csproj
@@ -5,5 +5,9 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
-
+  
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="6.0.25" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+  </ItemGroup>
 </Project>
