add docker-compose orchestration for microservices and databases

--- a/OnlineShop.Services.Catalog.Api/OnlineShop.Services.Catalog.Api.csproj
+++ b/OnlineShop.Services.Catalog.Api/OnlineShop.Services.Catalog.Api.csproj
@@ -5,7 +5,8 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <UserSecretsId>40ca34ab-91dd-4ec6-ad43-b0360baedee5</UserSecretsId>
-    <DockerDefaultTargetOS>Windows</DockerDefaultTargetOS>
+    <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+    <DockerComposeProjectPath>..\docker-compose.dcproj</DockerComposeProjectPath>
   </PropertyGroup>
 
   <ItemGroup>
