--- a/OnlineShop.Services.Auth.Api/OnlineShop.Services.Auth.Api.csproj
+++ b/OnlineShop.Services.Auth.Api/OnlineShop.Services.Auth.Api.csproj
@@ -5,7 +5,8 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <UserSecretsId>be13a512-f472-4600-8146-a6ee9d275e47</UserSecretsId>
-    <DockerDefaultTargetOS>Windows</DockerDefaultTargetOS>
+    <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+    <DockerComposeProjectPath>..\docker-compose.dcproj</DockerComposeProjectPath>
   </PropertyGroup>
 
   <ItemGroup>
