--- a/OnlineShop.Services.Auth.Api/appsettings.json
+++ b/OnlineShop.Services.Auth.Api/appsettings.json
@@ -6,14 +6,14 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "ConnectionString": "Server=(LocalDb)\\MSSQLLocalDB;Database=OnlineShop_Auth;Trusted_Connection=True;TrustServerCertificate=True"
-  },
   "ApiSettings": {
     "JwtOptions": {
       "Secret": "secret-key-for-jwt-auth",
       "Issuer": "online-shop-auth-api",
       "Audience": "online-shop-client"
     }
+  },
+  "ConnectionStrings": {
+    "ConnectionString": "Server=SqlServer; Database=OnlineShop_Auth; User Id=sa; Password=Passw0rd; Trust Server Certificate=True;"
   }
 }
