--- a/OnlineShop.Services.Basket.Api/OnlineShop.Services.Basket.Api.csproj
+++ b/OnlineShop.Services.Basket.Api/OnlineShop.Services.Basket.Api.csproj
@@ -5,7 +5,8 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <UserSecretsId>873a211e-284c-497b-90cc-1ca031f9a479</UserSecretsId>
-    <DockerDefaultTargetOS>Windows</DockerDefaultTargetOS>
+    <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+    <DockerComposeProjectPath>..\docker-compose.dcproj</DockerComposeProjectPath>
   </PropertyGroup>
 
   <ItemGroup>
