--- a/OnlineShop.Services.Catalog.Api/appsettings.json
+++ b/OnlineShop.Services.Catalog.Api/appsettings.json
@@ -8,7 +8,7 @@
   "AllowedHosts": "*",
   "ApiSettings": {
     "CatalogDatabaseOptions": {
-      "ConnectionString": "mongodb://localhost:27017",
+      "ConnectionString": "mongodb://mongodb:27017/CatalogDB",
       "DatabaseName": "CatalogDb",
       "CollectionName": "Products"
     }
