--- a/OnlineShop.Services.Basket.BusinessLayer/OnlineShop.Services.Basket.BusinessLayer.csproj
+++ b/OnlineShop.Services.Basket.BusinessLayer/OnlineShop.Services.Basket.BusinessLayer.csproj
@@ -9,10 +9,12 @@
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="12.0.1" />
     <PackageReference Include="FluentValidation.AspNetCore" Version="11.3.0" />
+    <PackageReference Include="MassTransit" Version="8.1.3-develop.1632" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\OnlineShop.Services.Basket.DataLayer\OnlineShop.Services.Basket.DataLayer.csproj" />
+    <ProjectReference Include="..\OnlineShop.Shared\OnlineShop.Shared.csproj" />
   </ItemGroup>
 
 </Project>
