--- a/OnlineShop.Services.Order.Api/OnlineShop.Services.Order.Api.csproj
+++ b/OnlineShop.Services.Order.Api/OnlineShop.Services.Order.Api.csproj
@@ -12,6 +12,8 @@
   <ItemGroup>
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
     <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.8.0" />
+    <PackageReference Include="MassTransit" Version="8.1.3-develop.1632" />
+    <PackageReference Include="MassTransit.RabbitMQ" Version="8.1.3-develop.1632" />
     <PackageReference Include="MediatR" Version="12.2.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.0">
       <PrivateAssets>all</PrivateAssets>
