--- a/launchSettings.json
+++ b/launchSettings.json
@@ -7,14 +7,14 @@
       "composeLaunchServiceName": "onlineshop.services.order.api",
       "composeLaunchUrl": "{Scheme}://localhost:{ServicePort}/swagger",
       "serviceActions": {
-        "onlineshop.services.basket.api": "DoNotStart",
-        "onlineshop.services.catalog.api": "DoNotStart",
-        "onlineshop.services.auth.api": "DoNotStart",
-        "mongodb": "DoNotStart",
-        "redis": "DoNotStart",
+        "onlineshop.services.basket.api": "StartWithoutDebugging",
+        "onlineshop.services.catalog.api": "StartWithoutDebugging",
+        "onlineshop.services.auth.api": "StartWithoutDebugging",
+        "mongodb": "StartWithoutDebugging",
+        "redis": "StartWithoutDebugging",
         "sqlserver": "StartWithoutDebugging",
         "onlineshop.services.order.api": "StartDebugging",
-        "rabbitmq": "DoNotStart"
+        "rabbitmq": "StartWithoutDebugging"
       }
     }
   }
