--- a/launchSettings.json
+++ b/launchSettings.json
@@ -4,12 +4,12 @@
       "commandName": "DockerCompose",
       "commandVersion": "1.0",
       "composeLaunchAction": "LaunchBrowser",
-      "composeLaunchServiceName": "onlineshop.services.basket.api",
+      "composeLaunchServiceName": "onlineshop.services.order.api",
       "composeLaunchUrl": "{Scheme}://localhost:{ServicePort}/swagger",
       "serviceActions": {
-        "onlineshop.services.basket.api": "StartWithoutDebugging",
-        "onlineshop.services.catalog.api": "StartWithoutDebugging",
-        "onlineshop.services.auth.api": "StartWithoutDebugging",
+        "onlineshop.services.basket.api": "StartDebugging",
+        "onlineshop.services.catalog.api": "StartDebugging",
+        "onlineshop.services.auth.api": "StartDebugging",
         "mongodb": "StartWithoutDebugging",
         "redis": "StartWithoutDebugging",
         "sqlserver": "StartWithoutDebugging",
