--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ version: '3.4'
 
 services:
   onlineshop.services.auth.api:
+    container_name: Auth_service
     image: ${DOCKER_REGISTRY-}onlineshopservicesauthapi
     build:
       context: .
@@ -10,18 +11,21 @@ services:
       - sqlserver
 
   onlineshop.services.catalog.api:
+    container_name: Catalog_service
     image: ${DOCKER_REGISTRY-}onlineshopservicescatalogapi
     build:
       context: .
       dockerfile: OnlineShop.Services.Catalog.Api\Dockerfile
 
   onlineshop.services.order.api:
+    container_name: Order_service
     image: ${DOCKER_REGISTRY-}onlineshopservicesorderapi
     build:
       context: .
       dockerfile: OnlineShop.Services.Order.Api\Dockerfile
 
   onlineshop.services.basket.api:
+    container_name: Basket_service
     image: ${DOCKER_REGISTRY-}onlineshopservicesbasketapi
     build:
       context: .
