--- a/OnlineShop.Services.Catalog.Api/appsettings.json
+++ b/OnlineShop.Services.Catalog.Api/appsettings.json
@@ -6,6 +6,18 @@
     }
   },
   "AllowedHosts": "*",
+  "Kestrel": {
+    "Endpoints": {
+      "Api": {
+        "Url": "https://catalog_service:7001",
+        "Protocols": "Http1"
+      },
+      "Grpc": {
+        "Url": "https://catalog_service:7010",
+        "Protocols": "Http2"
+      }
+    }
+  },
   "ApiSettings": {
     "CatalogDatabaseOptions": {
       "ConnectionString": "mongodb://mongodb:27017/CatalogDB",
