complete the gRPC communication

--- a/OnlineShop.Services.Basket.Api/appsettings.json
+++ b/OnlineShop.Services.Basket.Api/appsettings.json
@@ -8,5 +8,8 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "RedisUrl": "redis:6379"
+  },
+  "GrpcSettings": {
+    "CatalogUrl": "https://catalog_service:8001"
   }
 }
