--- a/OnlineShop.Services.Catalog.Application/OnlineShop.Services.Catalog.Application.csproj
+++ b/OnlineShop.Services.Catalog.Application/OnlineShop.Services.Catalog.Application.csproj
@@ -7,11 +7,24 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Protos\catalog.proto" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\OnlineShop.Services.Catalog.Domain\OnlineShop.Services.Catalog.Domain.csproj" />
     <PackageReference Include="AutoMapper" Version="12.0.1" />
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
     <PackageReference Include="FluentValidation.AspNetCore" Version="11.3.0" />
     <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.8.0" />
+    <PackageReference Include="Google.Protobuf" Version="3.25.1" />
+    <PackageReference Include="Grpc.AspNetCore" Version="2.60.0-pre1" />
+    <PackageReference Include="Grpc.AspNetCore.Server" Version="2.60.0-pre1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Protobuf Include="Protos\catalog.proto">
+      <GrpcServices>Server</GrpcServices>
+    </Protobuf>
   </ItemGroup>
 
 </Project>
