--- a/launchSettings.json
+++ b/launchSettings.json
@@ -4,11 +4,11 @@
       "commandName": "DockerCompose",
       "commandVersion": "1.0",
       "composeLaunchAction": "LaunchBrowser",
-      "composeLaunchServiceName": "onlineshop.services.catalog.api",
+      "composeLaunchServiceName": "onlineshop.services.basket.api",
       "composeLaunchUrl": "{Scheme}://localhost:{ServicePort}/swagger",
       "serviceActions": {
         "onlineshop.services.basket.api": "StartDebugging",
-        "onlineshop.services.catalog.api": "StartDebugging",
+        "onlineshop.services.catalog.api": "DoNotStart",
         "onlineshop.services.auth.api": "DoNotStart",
         "mongodb": "StartWithoutDebugging",
         "redis": "StartWithoutDebugging",
