--- a/OnlineShop.Services.Order.Api/appsettings.json
+++ b/OnlineShop.Services.Order.Api/appsettings.json
@@ -8,5 +8,9 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=SqlServer; Database=OnlineShop_Order; User Id=sa; Password=Passw0rd; Trust Server Certificate=True;"
+  },
+  "HangfireOptions": {
+    "User": "user",
+    "Password": "password"
   }
 }
