--- a/OnlineShop.Services.Order.BusinessLayer/OnlineShop.Services.Order.BusinessLayer.csproj
+++ b/OnlineShop.Services.Order.BusinessLayer/OnlineShop.Services.Order.BusinessLayer.csproj
@@ -9,6 +9,8 @@
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="12.0.1" />
     <PackageReference Include="FluentValidation" Version="11.8.0" />
+    <PackageReference Include="Hangfire" Version="1.8.6" />
+    <PackageReference Include="MailKit" Version="4.3.0" />
     <PackageReference Include="MassTransit" Version="8.1.3-develop.1632" />
     <PackageReference Include="MediatR" Version="12.2.0" />
   </ItemGroup>
