add gateway porject and configure it

--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -6,8 +6,8 @@ services:
       - ASPNETCORE_ENVIRONMENT=Development
       - ASPNETCORE_URLS=https://+:443;http://+:80
     ports:
-      - 6000:80
-      - 7000:443
+      - 6004:80
+      - 7004:443
     volumes:
       - ${APPDATA}/Microsoft/UserSecrets:/root/.microsoft/usersecrets:ro
       - ${APPDATA}/ASP.NET/Https:/root/.aspnet/https:ro
@@ -45,6 +45,18 @@ services:
     volumes:
       - ${APPDATA}/Microsoft/UserSecrets:/root/.microsoft/usersecrets:ro
       - ${APPDATA}/ASP.NET/Https:/root/.aspnet/https:ro
+      
+  onlineshop.apigateway.ocelot:
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+      - ASPNETCORE_HTTP_PORTS=8080
+      - ASPNETCORE_HTTPS_PORTS=8081
+    ports:
+      - 6000:8080
+      - 7000:8081
+    volumes:
+      - ${APPDATA}/Microsoft/UserSecrets:/home/app/.microsoft/usersecrets:ro
+      - ${APPDATA}/ASP.NET/Https:/home/app/.aspnet/https:ro
 
   sqlserver:
     environment:
@@ -81,10 +93,10 @@ services:
       - rabbitmq-data:/var/lib/rabbitmq
     restart: unless-stopped
 
-
 volumes:
   mssql-data:
   mongo-data:
   redis-data:
   rabbitmq-data:
+
 
