add hangfire service, seperate email messages and settings

--- a/OnlineShop.Services.Order.Api/appsettings.json
+++ b/OnlineShop.Services.Order.Api/appsettings.json
@@ -12,5 +12,12 @@
   "HangfireOptions": {
     "User": "user",
     "Password": "password"
+  },
+  "EmailSetup": {
+    "MailBoxName": "Online shop Order service",
+    "MailBoxAddress": "kanura56@gmail.com",
+    "EmailHost": "smtp.gmail.com",
+    "EmailHostPort": 587,
+    "MailBoxPassword": "qenl revv lyft lhud"
   }
 }
